16-jenkins-kubernets-ansible/0-terraform/main.tf
provider "aws" {
  region = "sa-east-1"
}

data "http" "myip" {
  url = "http://ipv4.icanhazip.com" # outra opção "https://ifconfig.me"
}

resource "aws_instance" "jenkins" {
  ami                         = "ami-054a31f1b3bf90920" #data.aws_ami.ubuntu.id
  subnet_id                   = "subnet-03575db38d50158f1"
  instance_type               = "t2.xlarge"
  key_name                    = "key-dev-ernane-aws"
  associate_public_ip_address = true

  root_block_device {
    encrypted   = true
    volume_size = 32
  }

  tags = {
    Name = "jenkins"
  }

  vpc_security_group_ids = [aws_security_group.jenkins.id]
}

resource "aws_security_group" "jenkins" {
  name        = "acessos_jenkins"
  description = "acessos_jenkins inbound traffic"
  vpc_id      = "vpc-002bf2946d3dba700"

  ingress = [
    {
      description      = "SSH from VPC"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
      prefix_list_ids  = null,
      security_groups : null,
      self : null
    },
    {
      description      = "SSH from VPC"
      from_port        = 8080
      to_port          = 8080
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
      prefix_list_ids  = null,
      security_groups : null,
      self : null
    },
    #    {
    #      cidr_blocks      = []
    #      description      = "Libera acesso k8s_workers e k8s_masters"
    #      from_port        = 0
    #      ipv6_cidr_blocks = []
    #      prefix_list_ids  = []
    #      protocol         = "-1"
    #      security_groups = [
    #        "sg-0e3fac7d6f17318c3, sg-00f5b4e524908cd5b",
    #      ]
    #      self    = false
    #      to_port = 0
    #    },
  ]

  egress = [
    {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"],
      prefix_list_ids  = null,
      security_groups : null,
      self : null,
      description : "Libera dados da rede interna"
    }
  ]

  tags = {
    Name = "jenkins-lab"
  }
}

# terraform refresh para mostrar o ssh
output "jenkins" {
  value = [
    "jenkins",
    "id: ${aws_instance.jenkins.id}",
    "private: ${aws_instance.jenkins.private_ip}",
    "public: ${aws_instance.jenkins.public_ip}",
    "public_dns: ${aws_instance.jenkins.public_dns}",
    "ssh -i ~/.ssh/id_rsa ubuntu@${aws_instance.jenkins.public_dns}"
  ]
}
